When 2.2 Main Complete!

--- a/config.json
+++ b/config.json
@@ -7,5 +7,6 @@
     ],
     "last_public_update": "2017-11-20T23:57:05+00:00",
     "last_beta_update": "2023-12-11T04:37:09+00:00",
+    "last_retrieval": "2023-12-13T18:37:10.137913",
     "retrieve_new_data": true
 }
